# bili_extropy

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  OLD_README.md  README.md  sea-orm.sh
.github/scripts/: test.sh
.github/workflows/: publish.yaml  release.yaml  test.yaml
crates/fav_bili/: Cargo.toml  README.md  build.rs
crates/fav_bili/src/: api.rs  command.rs  cookies.rs  lib.rs  state.rs  table.rs  version.rs
crates/fav_bili/src/action/: activate.rs  auth.rs  clone.rs  deactivate.rs  download.rs  fetch.rs  like.rs  list.rs  mod.rs  pull.rs  status.rs
crates/fav_bili/src/db/: account.rs  account_collection.rs  clone.rs  collection.rs  collection_media.rs  download.rs  media.rs  media_up.rs  mod.rs  set.rs  status.rs  up_account.rs  up_media.rs
crates/fav_bili/src/entity/: account.rs  account_collection.rs  collection.rs  collection_media.rs  media.rs  mod.rs  status.rs  up.rs  up_account.rs  up_media.rs
crates/fav_bili/src/entity/entity_inner/: mod.rs
crates/fav_bili/src/normalization/: index.rs
crates/fav_bili/src/payload/: dash.rs  media.rs  set.rs  ticket.rs  up.rs
crates/fav_bili/src/response/: buvid3.rs  dash.rs  like.rs  media.rs  mod.rs  set.rs  ticket.rs  up.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20250527_000001_create_table.rs
crates/migration/src/m20250413_000001_create_table/: mod.rs
crates/migration/src/m20250413_000001_create_table/midtable/: account_collection.rs  collection_media.rs  downloadtask_medias.rs  media_up.rs  media_upper.rs  mod.rs  status_collection.rs  status_downloadrule.rs  status_media.rs  up_account.rs  upper_account.rs  upper_media.rs
crates/migration/src/m20250413_000001_create_table/table/: account.rs  collection.rs  downloadrule.rs  downloadtask.rs  media.rs  mod.rs  status.rs  up.rs  upper.rs
crates/migration/src/m20250527_000001_create_table/: mod.rs
crates/migration/src/m20250527_000001_create_table/midtable/: account_collection.rs  collection_media.rs  media_up.rs  mod.rs  status_collection.rs  status_media.rs  up_account.rs
crates/migration/src/m20250527_000001_create_table/table/: media.rs  mod.rs  status.rs
crates/origin/: Cargo.toml
crates/origin/src/: api.rs  console.rs  lib.rs  log.rs  plugins.rs  state.rs  table.rs  wbi.rs
crates/origin/src/command/: account.rs  auth.rs  clone.rs  downloadrule.rs  downloadtask.rs  fetch.rs  help.rs  list.rs  mod.rs  pull.rs  status.rs
crates/origin/src/components/: handle.rs  initialize.rs  mod.rs
crates/origin/src/components/account/: handle.rs  load.rs
crates/origin/src/components/auth/: handle.rs
crates/origin/src/components/download/: handle.rs  mod.rs  playload.rs  resource.rs
crates/origin/src/components/downloadrule/: load.rs
crates/origin/src/components/downloadtask/: handle.rs  insert.rs  load.rs  mod.rs  related.rs
crates/origin/src/components/fetch/: handle.rs  mod.rs  task.rs
crates/origin/src/components/list/: handle.rs  load.rs
crates/origin/src/components/pull/: handle.rs
crates/origin/src/components/status/: handle.rs
crates/origin/src/components/upper/: load.rs
crates/origin/src/db/: medias.rs  mod.rs  status.rs
crates/origin/src/entity/: account.rs  account_collection.rs  collection.rs  collection_media.rs  downloadrule.rs  downloadtask.rs  downloadtask_medias.rs  media.rs  mod.rs  status.rs  status_downloadrule.rs  up.rs  up_account.rs  upper.rs  upper_account.rs  upper_media.rs
crates/origin/src/normalization/: mod.rs
crates/origin/src/output/: entry.rs  index.rs
crates/origin/src/payload/: buvid3.rs  collection.rs  dash.rs  like.rs  mod.rs  set.rs  up.rs
crates/origin/src/response/: dash.rs  mod.rs
fav/: Cargo.toml
fav/src/: api.rs  command.rs  cookies.rs  event.rs  main.rs  payload.rs  response.rs  runtime.rs  state.rs  system.rs  table.rs  version.rs  wbi.rs
fav/src/db/: account.rs  media.rs  mod.rs  set.rs  set_account.rs  up.rs  user.rs
fav/src/entity/: mod.rs
fav/src/entity/entity_inner/: account.rs  media.rs  media_set.rs  mod.rs  prelude.rs  set.rs  set_account.rs  up.rs  up_account.rs  user.rs  video.rs  video_set.rs  video_up.rs
fav/src/migration/: m20250527_000001_create_table.rs  mod.rs
fav/src/payload/: auth.rs  mod.rs  set.rs  up.rs  wbi.rs  whoami.rs
fav/src/response/: auth.rs  media.rs  mod.rs  set.rs  up.rs  wbi.rs  whoami.rs
fav/src/system/: activate.rs  auth.rs  deactivate.rs  fetch.rs  list.rs  mod.rs  pull.rs
fav_bili/: Cargo.toml  README.md
fav_bili/src/: api.rs  command.rs  event.rs  main.rs  table.rs  version.rs  wbi.rs
fav_bili/src/action/: activate.rs  auth.rs  deactivate.rs  fetch.rs  like.rs  list.rs  mod.rs  pull.rs
fav_bili/src/db/: account.rs  media.rs  media_set.rs  media_up.rs  mod.rs  set.rs  set_account.rs  up.rs  up_account.rs
fav_bili/src/entity/entity_inner/: account.rs  media.rs  media_set.rs  media_up.rs  mod.rs  prelude.rs  set.rs  set_account.rs  up.rs  up_account.rs
fav_bili/src/payload/: auth.rs  dash.rs  like.rs  media.rs  mod.rs  ticket.rs
fav_bili/src/response/: dash.rs  media.rs  set.rs  wbi.rs
fav_bili/src/system/: activate.rs  auth.rs  deactivate.rs  fetch.rs  like.rs  pull.rs
fav_core/: Cargo.toml
fav_core/src/: ops.rs
fav_utils/: Cargo.toml
fav_v0/: README.md
migration/: Cargo.toml
migration/src/: lib.rs
src/: main.rs
