# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["fav", "migration"]
default-members = ["fav"]
resolver = "2"

[workspace.package]
authors = ["Louis <836250617@qq.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/kingwingfly/fav"
documentation = "https://github.com/kingwingfly/fav"

[workspace.dependencies]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
