[package]
name = "entropy_bili"
version = "0.1.0"
edition = "2024"
authors = ["Louis <836250617@qq.com>"]
license = "MIT"
repository = "https://github.com/kingwingfly/fav"
documentation = "https://github.com/kingwingfly/fav"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/fav_bili", "crates/migration"]
resolver = "2"

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"

fav_bili = { path = "./crates/fav_bili" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
