[package]
name = "bili_extropy_ecs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/origin", "crates/migration"]
resolver = "2"

[dependencies]
origin = { path = "./crates/origin" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# 1. 优化等级：'z' 专为最小体积设计，比 's' 更激进
opt-level = "z"
