[package]
name = "fav_bili"
version = "1.0.0-alpha.2"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Back up your favorite bilibili online resources with CLI."
keywords = ["bilibili", "bili"]

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "process",
] }
tokio-util = { version = "0.7" }
futures = { version = "0.3" }
bevy_ecs = { version = "0.16" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { version = "1.0" }
const_format = { version = "0.2", features = ["fmt"] }
dashmap = { version = "6.1" }
clap = { version = "4.5", features = ["cargo"] }
clap_complete = { version = "4.5.51" }
api_req = { version = "0.4", features = ["cookies"] }
reqwest = { version = "0.12" }
url = { version = "2.5", features = ["serde"] }
cookie = { version = "0.18.1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_urlencoded = { version = "0.7" }
qrcode = { version = "0.14", default-features = false }
tabled = { version = "0.19.0" }
indicatif = { version = "0.17.11" }
unicode-width = { version = "0.2.0" }
md5 = { version = "0.7" }
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "macros",
] }
sea-orm-migration = { version = "1.1.0", features = [
    "runtime-tokio",
    "sqlx-sqlite",
] }
tempfile = { version = "3.20" }
sanitize-filename = { version = "0.6" }

[build-dependencies]
vergen = { version = "9.0", features = ["rustc"] }
vergen-gitcl = { version = "1.0", features = [] }
