[package]
name = "origin"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_log",
    "track_location",
    "trace",
] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "process",
] }
tokio-util = { version = "0.7" }
futures = { version = "0.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { version = "1.0" }
const_format = { version = "0.2", features = ["fmt"] }
dashmap = { version = "6.1" }
api_req = { version = "0.5.2", features = ["cookies"] }
reqwest = { version = "0.13" }
url = { version = "2.5", features = ["serde"] }
cookie = { version = "0.18" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_urlencoded = { version = "0.7" }
qrcode = { version = "0.14", default-features = false }
tabled = { version = "0.20.0" }
indicatif = { version = "0.18.4" }
unicode-width = { version = "0.2" }
md5 = { version = "0.8.0" }
hex = { version = "0.4" }
ring = { version = "0.17" }
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "macros",
] }
sea-orm-migration = { version = "1.1", features = [
    "runtime-tokio",
    "sqlx-sqlite",
] }
tempfile = { version = "3.20" }
sanitize-filename = { version = "0.6" }
paste = { version = "1.0" }
flate2 = "1.0"

migration = { path = "../migration" }
rsmpeg = { version = "0.18", features = ["ffmpeg8"] }
bevy-tokio-tasks = "0.18.0"

itertools = "0.14.0"
rustyline = "18.0.0"
shell-words = "1.1"
argmap = "1.1.2"
strum = { version = "0.28.0", features = ["derive"] }
